# ku

./: .clang-format  .gitignore  CMakeLists.txt  README.md  createPackage.sh  meson.build  meson.format
src/: Ku.cpp  Ku.h  main.cpp  meson.build
src/Constraints/: AsteriskSudokuConstraint.hpp  Constraint.hpp  ConstraintConcept.hpp  ConstraintFactory.hpp  ConstraintInterface.hpp  ConstraintTraits.hpp  ConstraintTraitsConcept.hpp  Disjoint3x3BoxesSudokuConstraint.hpp  Exact3x3BoxesConstraint.hpp  ExactColumnConstraint.hpp  ExactNegativeDiagonalConstraint.hpp  ExactPositiveDiagonalConstraint.hpp  ExactRowConstraint.hpp  HyperSudokuConstraint.hpp  KingPatternConstraint.hpp  KingTorusPatternConstraint.hpp  KnightPatternConstraint.hpp  KnightTorusPatternConstraint.hpp  NegativeDiagonalEvenConstraint.hpp  NegativeDiagonalOddConstraint.hpp  NeighborPatternUtilities.hpp  PatternConstraint.hpp  Patterns.hpp  PositiveDiagonalEvenConstraint.hpp  PositiveDiagonalOddConstraint.hpp  meson.build
src/Core/: ConstraintType.hpp  Digits.hpp  GridUtilities.hpp  Option.hpp  OptionsList.hpp  PuzzleIntrinsics.hpp  PuzzleSpace.hpp  meson.build
src/Drawing/: DataStructureDrawing.hpp  DrawingOptions.hpp  DrawingOptionsTemplated.hpp  DrawingUtilities.cpp  DrawingUtilities.hpp  PuzzleDrawing.hpp  SvgCircle.cpp  SvgDocument.cpp  SvgElement.cpp  SvgElement.hpp  SvgGroup.cpp  SvgGroup.hpp  SvgLine.cpp  SvgPolyline.cpp  SvgRect.cpp  SvgSquigglyLine.cpp  SvgSquigglyLine.hpp  SvgText.cpp  SvgText.hpp  SvgZigZagLine.cpp  meson.build
src/Puzzle/: Puzzle.hpp  meson.build
src/RandomGenerator/: RandomGenerator.cpp  meson.build
src/Sandbox/: meson.build
src/Solver/: AlgorithmC.cpp  AlgorithmC.hpp  DancingCellsStructure.cpp  DancingCellsStructure.hpp  OptionData.cpp  OptionData.hpp  XccElement.cpp  meson.build
src/Utilities/: ArrayUtilities.hpp  FileIo.cpp  FileIo.hpp  FixedCapacityArray.hpp  StringUtilities.cpp  StringUtilities.hpp  TemporaryDirectory.hpp  Timer.cpp  meson.build
src/ku/: Board.cpp  Board.h  Board.hpp  MaskUtilities.cpp  MaskUtilities.h  Setter.cpp  Setter.h  Setter.hpp  Sudo.cpp  Sudo.hpp  Sudoku.cpp  Sudoku.h  Sudoku.hpp  SvgUtilities.cpp  SvgUtilities.h  Validator.cpp  Validator.h  Validator.hpp  meson.build
src/ku/constraintTemplated/: AntiKingConstraint.hpp  AntiKingTorusConstraint.hpp  AntiKnightTorusConstraint.hpp  AsteriskSudokuConstraint.hpp  CellConstraint.hpp  ColumnConstraint.hpp  Constraint.hpp  ConstraintConcept.hpp  ConstraintFactory.hpp  ConstraintInterface.hpp  ConstraintMacros.hpp  ConstraintTraits.hpp  ConstraintTraitsConcept.hpp  Disjoint3x3BoxesConstraint.hpp  Disjoint3x3BoxesSudokuConstraint.hpp  Exact3x3BoxesConstraint.hpp  ExactColumnConstraint.hpp  ExactNegativeDiagonalConstraint.hpp  ExactPositiveDiagonalConstraint.hpp  ExactRowConstraint.hpp  HyperSudokuConstraint.hpp  KingPatternConstraint.hpp  KingTorusPatternConstraint.hpp  KnightPatternConstraint.hpp  KnightTorusPatternConstraint.hpp  NegativeDiagonalEvenConstraint.hpp  NegativeDiagonalOddConstraint.hpp  PatternConstraint.hpp  PositiveDiagonalEvenConstraint.hpp  PositiveDiagonalOddConstraint.hpp  RowConstraint.hpp
src/ku/constraints/: AbstractConstraint.cpp  AbstractConstraint.h  AbstractConstraint.hpp  AntiKing.cpp  AntiKing.h  AntiKing.hpp  AntiKingTorus.cpp  AntiKingTorus.h  AntiKingTorus.hpp  AntiKnight.cpp  AntiKnight.h  AntiKnight.hpp  AntiKnightTorus.cpp  AntiKnightTorus.h  AntiKnightTorus.hpp  Asterisk.cpp  Asterisk.h  Asterisk.hpp  ConstraintFactory.cpp  ConstraintFactory.h  ConstraintFactory.hpp  ConstraintType.h  ConstraintType.hpp  ConstraintUtilities.cpp  ConstraintUtilities.h  ConstraintUtilities.hpp  DisjointBoxes.cpp  DisjointBoxes.h  DisjointBoxes.hpp  HyperSudoku.cpp  HyperSudoku.h  HyperSudoku.hpp  NegativeDiagonal.cpp  NegativeDiagonal.h  NegativeDiagonal.hpp  NegativeDiagonalEven.cpp  NegativeDiagonalEven.h  NegativeDiagonalEven.hpp  NegativeDiagonalOdd.cpp  (+23 more)
src/sandbox/: main.cpp  meson.build
src/sudoku/: Board.cpp  Board.h  Setter.cpp  Setter.h  Sudoku.cpp  Sudoku.h  SvgUtilities.cpp  SvgUtilities.h  Validator.cpp  Validator.h
src/utilities/: Logger.h  Utilities.h
test/Constraints/: AsteriskSudokuConstraintTest.cpp  CellConstraintTest.cpp  ConstraintFactoryTest.cpp  ConstraintTest.cpp  ConstraintTestHelpers.hpp  ConstraintTraitsTest.cpp  Disjoint3x3BoxesSudokuConstraintTest.cpp  Exact3x3BoxesConstraintTest.cpp  ExactColumnConstraintTest.cpp  ExactNegativeDiagonalConstraintTest.cpp  ExactPositiveDiagonalConstraintTest.cpp  ExactRowConstraintTest.cpp  HyperSudokuConstraintTest.cpp  KingPatternConstraintTest.cpp  KingTorusPatternConstraintTest.cpp  KnightPatternConstraintTest.cpp  KnightTorusPatternConstraintTest.cpp  NegativeDiagonalEvenConstraintTest.cpp  NegativeDiagonalOddConstraintTest.cpp  NeighborPatternUtilitiesTest.cpp  PositiveDiagonalEvenConstraintTest.cpp  PositiveDiagonalOddConstraintTest.cpp  meson.build
test/Core/: CellTest.cpp  ConstraintTypeTest.cpp  DigitsTest.cpp  GridUtilitiesTest.cpp  PuzzleIntrinsicsTest.cpp  PuzzleSpaceTest.cpp  meson.build
test/Drawing/: DrawingUtilitiesTest.cpp  SvgDocumentTest.cpp  SvgElementTest.cpp  SvgSquigglyLineTest.cpp  SvgZigZagLineTest.cpp  meson.build
test/PerformanceTest/: ClassicSudokuBaseTest.cpp  KuTestArguments.cpp  SingleConstraintTest.cpp  meson.build
test/Puzzle/: PuzzleTest.cpp  SudokuSamplesTest.cpp  main.cpp  meson.build
test/RandomGenerator/: RandomGeneratorTest.cpp  meson.build
test/Solver/: AlgorithmCTest.cpp  DancingCellsStructureTest.cpp  meson.build
test/Utilities/: ArrayUtilitiesTest.cpp  FixedCapacityArrayTest.cpp  IdPackingTest.cpp  MathUtilitiesTest.cpp  StringUtilitiesTest.cpp  TemporaryDirectoryTest.cpp  TimerTest.cpp  meson.build
test/unitTest/: AlgorithmCTest.cpp  AlgorithmXTest.cpp  ArrayUtilitiesTest.cpp  DancingCellsStructureTest.cpp  FileIoTest.cpp  FixedCapacityArrayTest.cpp  GenerateSolutionTest.cpp  IdPackingTest.cpp  MathUtilitiesTest.cpp  RandomGeneratorTest.cpp  SparseCoordinateMatrixTest.cpp  SudokuTest.cpp  TemporaryDirectoryTest.cpp  TimerTest.cpp  main.cpp  meson.build
(+269 files in other folders)
