ku_sources = files(
  'constraints/AbstractConstraint.cpp',
  'constraints/AntiKing.cpp',
  'constraints/AntiKingTorus.cpp',
  'constraints/AntiKnight.cpp',
  'constraints/AntiKnightTorus.cpp',
  'constraints/Asterisk.cpp',
  'constraints/ConstraintFactory.cpp',
  'constraints/ConstraintUtilities.cpp',
  'constraints/DisjointBoxes.cpp',
  'constraints/HyperSudoku.cpp',
  'constraints/NegativeDiagonal.cpp',
  'constraints/NegativeDiagonalEven.cpp',
  'constraints/NegativeDiagonalOdd.cpp',
  'constraints/PositiveDiagonal.cpp',
  'constraints/PositiveDiagonalEven.cpp',
  'constraints/PositiveDiagonalOdd.cpp',
  'constraints/SudokuBox.cpp',
  'constraints/SudokuCell.cpp',
  'constraints/SudokuColumn.cpp',
  'constraints/SudokuRow.cpp',
  'drawing/DrawingOptions.cpp',
  'drawing/DrawingUtilities.cpp',
  'drawing/SvgCircle.cpp',
  'drawing/SvgDocument.cpp',
  'drawing/SvgElement.cpp',
  'drawing/SvgGroup.cpp',
  'drawing/SvgLine.cpp',
  'drawing/SvgPolyline.cpp',
  'drawing/SvgRect.cpp',
  'drawing/SvgSquigglyLine.cpp',
  'drawing/SvgText.cpp',
  'drawing/SvgZigZagLine.cpp',
  'randomGenerator/RandomGenerator.cpp',
  'solver/AlgorithmC.cpp',
  'solver/DancingCellsNode.cpp',
  'solver/DancingCellsStructure.cpp',
  'solver/ItemData.cpp',
  'solver/OptionData.cpp',
  'solver/Solver.cpp',
  'solver/XccElement.cpp',
  'utilities/FileIo.cpp',
  'utilities/IdPacking.cpp',
  'utilities/TemporaryDirectory.cpp',
  'utilities/Timer.cpp',
  'Board.cpp',
  'Setter.cpp',
  'Sudo.cpp',
  'Sudoku.cpp',
  'Validator.cpp',
)