ku_sources = files(
  'drawing/DrawingOptions.cpp',
  'drawing/DrawingUtilities.cpp',
  'drawing/SvgCircle.cpp',
  'drawing/SvgDocument.cpp',
  'drawing/SvgElement.cpp',
  'drawing/SvgGroup.cpp',
  'drawing/SvgLine.cpp',
  'drawing/SvgPolyline.cpp',
  'drawing/SvgRect.cpp',
  'drawing/SvgSquigglyLine.cpp',
  'drawing/SvgText.cpp',
  'drawing/SvgZigZagLine.cpp',
  'randomGenerator/RandomGenerator.cpp',
  'solver/AlgorithmC.cpp',
  'solver/DancingCellsStructure.cpp',
  'solver/ItemData.cpp',
  'solver/OptionData.cpp',
  'solver/XccElement.cpp',
  'utilities/FileIo.cpp',
  'utilities/TemporaryDirectory.cpp',
  'utilities/Timer.cpp',
)