ku_sources = files(
  'DrawingOptions.cpp',
  'DrawingUtilities.cpp',
  'SvgCircle.cpp',
  'SvgDocument.cpp',
  'SvgElement.cpp',
  'SvgGroup.cpp',
  'SvgLine.cpp',
  'SvgPolyline.cpp',
  'SvgRect.cpp',
  'SvgSquigglyLine.cpp',
  'SvgText.cpp',
  'SvgZigZagLine.cpp',
  'randomGenerator/RandomGenerator.cpp',
  'solver/AlgorithmC.cpp',
  'solver/DancingCellsStructure.cpp',
  'solver/ItemData.cpp',
  'solver/OptionData.cpp',
  'solver/XccElement.cpp',
  'utilities/FileIo.cpp',
  'utilities/TemporaryDirectory.cpp',
  'utilities/Timer.cpp',
)