unit_test_sources = files(
  'AlgorithmXTest.cpp',
  'constraints/AntiKingTest.cpp',
  'constraints/AntiKingTorusTest.cpp',
  'constraints/AntiKnightTest.cpp',
  'constraints/AntiKnightTorusTest.cpp',
  'constraints/AsteriskTest.cpp',
  'constraints/DisjointBoxesTest.cpp',
  'constraints/HyperSudokuTest.cpp',
  'constraints/NegativeDiagonalTest.cpp',
  'constraints/NegativeDiagonalEvenTest.cpp',
  'constraints/NegativeDiagonalOddTest.cpp',
  'constraints/PositiveDiagonalTest.cpp',
  'constraints/PositiveDiagonalEvenTest.cpp',
  'constraints/PositiveDiagonalOddTest.cpp',
  'constraints/StandardChecksTest.cpp',
  'constraints/SudokuBoxTest.cpp',
  'constraints/SudokuCellTest.cpp',
  'constraints/SudokuColumnTest.cpp',
  'constraints/SudokuRowTest.cpp',
  'drawing/ElementTest.cpp',
  'drawing/DocumentTest.cpp',
  'IdPackingTest.cpp',
  'main.cpp',
  'RandomGeneratorTest.cpp',
  'SudokuTest.cpp',
  'TimerTest.cpp',
)