unit_test_sources = files(
  'AlgorithmCTest.cpp',
  'ArrayUtilitiesTest.cpp',
  'DancingCellsStructureTest.cpp',
  'FileIoTest.cpp',
  'FixedCapacityArrayTest.cpp',
  'IdPackingTest.cpp',
  'main.cpp',
  'MathUtilitiesTest.cpp',
  'RandomGeneratorTest.cpp',
  'TemporaryDirectoryTest.cpp',
  'TimerTest.cpp',
  'DrawingUtilitiesTest.cpp',
  'SvgDocumentTest.cpp',
  'SvgSquigglyLineTest.cpp',
  'SvgZigZagLineTest.cpp',
  'puzzles/CellTest.cpp',
  'puzzles/DigitTest.cpp',
  'puzzles/PuzzleIntrinsicsTest.cpp',
  'puzzles/PuzzleSpaceTest.cpp',
  'puzzles/PuzzleTest.cpp',
  'puzzleSamples/SudokuTest.cpp',
)